[package]
authors = ["Kazurin Nanako"]
edition = "2018"
license = "MIT"
name = "dll-spoofer-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = {version = "0.3.9", features = ["minwindef", "winnt", "winuser", "libloaderapi", "sysinfoapi"]}
win32-error = "0.9.0"

[build-dependencies]
pelite = "0.9.0"
winapi = {version = "0.3.9", features = ["sysinfoapi"]}
